@@ -80,6 +80,7 @@
       <Class name="~org[.]kiji[.]schema[.]impl[.]HashPrefixedEntityId" />
       <!-- null indicates a missing cell and is different from a cell with no bytes -->
       <Class name="~org[.]kiji[.]schema[.]impl[.]HBaseKijiRowData" />
+      <Class name="~org[.]kiji[.]schema[.]filter[.]KijiColumnRangeFilter" />
     </Or>
     <Bug pattern="PZLA_PREFER_ZERO_LENGTH_ARRAYS" />
   </Match>
