@@ -3,6 +3,8 @@
                               Kiji Schema Release Notes
 
 Version 1.0.2
+  * SCHEMA-314. Row filters constructors are being replaced with
+      factory methods such Filters.and(...) and Filters.or(...).
   * SCHEMA-303. Allows proper serialization of row filters.
       Contributed by Jeff Kolesky (jeff.kolesky@gmail.com).
 
